--- a/ClientApp/src/UI/Button/Button.module.css
+++ b/ClientApp/src/UI/Button/Button.module.css
@@ -1,19 +1,19 @@
 .button {
-  font: inherit;
-  border: 1px solid #4f005f;
-  background: #4f005f;
-  color: white;
-  padding: 0.75rem 3.5rem;
-  cursor: pointer;
-  font-size: 1.15rem;
-  border-radius: 30px;
+    font: inherit;
+    border: 1px solid #0a6405;
+    background: #0a6405;
+    color: white;
+    padding: 0.75rem 3.5rem;
+    cursor: pointer;
+    font-size: 1.15rem;
+    border-radius: 30px;
 }
 
-.button:hover,
-.button:active {
-  background: #741188;
-  border-color: #741188;
-}
+    .button:hover,
+    .button:active {
+        background: #0eac55;
+        border-color: #0eac55;
+    }
 
 .button:focus {
   outline: none;
